Alterações Api ItensQuotationController

--- a/IARATesteCotacao.Api/appsettings.json
+++ b/IARATesteCotacao.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=app.r2asistemas.com.br;Database=IARACotacao;user ID=sa; Password=db@r2a#9140*;"
+    "DefaultConnection": "Server=app.r2asistemas.com.br;Database=IARACotacao;user ID=iara_test; Password=iara_test;"
   },
 
   "Logging": {
